added header, hero and collections sections

--- a/index.html
+++ b/index.html
@@ -4,10 +4,49 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/global.css">
+    <link rel="stylesheet" href="css/font.css">
     <link rel="stylesheet" href="css/main.css">
-    <title></title>
+    <link rel="stylesheet" href="css/sections/hero.css">
+    <link rel="stylesheet" href="css/sections/collection.css">
+    <title>Mildo</title>
 </head>
 <body>
-    
+    <header class="header">
+        <h1 class="header__logo">Mildo</h1>
+    </header>
+    <main class="main">
+        <section class="hero">
+            <div class="hero__container">
+                <h2 class="hero__title">DESIGNED & CRAFTED FOR LONGEVITY.</h2>
+            </div>
+            <video
+                class="hero__video"
+                muted
+                autoplay
+                loop
+            >
+                <source src="https://firebasestorage.googleapis.com/v0/b/mildo-84606.appspot.com/o/mildo-main.video.mov?alt=media&token=f61050a0-79c3-4c9c-b3de-70940bffd62a" type="video/mp4">
+            </video>
+        </section>
+        <section class="collections">
+            <div class="collections__container">
+                <h2 class="collections__title">Our collections</h2>
+                <ul class="collections__list">
+                    <li class="collections__list-item">
+                        <h2 class="collections__list-title">
+                            Men's Shoes
+                        </h2>
+                        <img
+                            class="collections__list-img"
+                            src="https://firebasestorage.googleapis.com/v0/b/mildo-84606.appspot.com/o/mildo-boots.webp?alt=media&token=6aadbaec-57ab-4c2c-a62d-c95fd2391469"
+                        >
+                    </li>
+                </ul>
+            </div>
+        </section>
+    </main>
+    <footer class="footer">
+    </footer>
 </body>
 </html>
