refactor: other list of collections added and favorites section started

--- a/index.html
+++ b/index.html
@@ -35,11 +35,51 @@
                 <ul class="collections__list">
                     <li class="collections__list-item">
                         <h2 class="collections__list-title">
-                            Men's Shoes
+                            Shoes
+                        </h2>
+                        <img
+                            class="collections__list-img"
+                            src="https://firebasestorage.googleapis.com/v0/b/mildo-84606.appspot.com/o/mildo-tufli.jpg?alt=media&token=c1af4546-f041-4c89-9e1b-560097f7b500"
+                        >
+                    </li>
+                    <li class="collections__list-item">
+                        <h2 class="collections__list-title">
+                            Boots
                         </h2>
                         <img
                             class="collections__list-img"
                             src="https://firebasestorage.googleapis.com/v0/b/mildo-84606.appspot.com/o/mildo-boots.webp?alt=media&token=6aadbaec-57ab-4c2c-a62d-c95fd2391469"
+                        >
+                    </li>
+                    <li class="collections__list-item">
+                        <h2 class="collections__list-title">
+                            Sneakers
+                        </h2>
+                        <img
+                            class="collections__list-img"
+                            src="https://firebasestorage.googleapis.com/v0/b/mildo-84606.appspot.com/o/mildo-snekaers.webp?alt=media&token=b0a037b7-1a9e-4104-9c76-374a8c70d6e1"
+                        >
+                    </li>
+                    <li class="collections__list-item">
+                        <h2 class="collections__list-title">
+                            Slipper
+                        </h2>
+                        <img
+                            class="collections__list-img"
+                            src="https://firebasestorage.googleapis.com/v0/b/mildo-84606.appspot.com/o/mildo-slipper.webp?alt=media&token=c61accee-b37b-4928-b7d7-a22082b7e4e9"
+                        >
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section class="favorites">
+            <div class="favorites__container">
+                <h2 class="favorites__title">Some of our favorites</h2>
+                <ul class="favorites__list">
+                    <li class="favorites__list-item">
+                        <img
+                            class="favorites__list-img"
+                            src="https://firebasestorage.googleapis.com/v0/b/mildo-84606.appspot.com/o/mildo-tufli.jpg?alt=media&token=c1af4546-f041-4c89-9e1b-560097f7b500"
                         >
                     </li>
                 </ul>
