feat: telegram bot integrated with website

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/sections/hero.css">
     <link rel="stylesheet" href="css/sections/collection.css">
+    <script src="js/index.js" defer></script>
     <title>Mildo</title>
 </head>
 <body>
