feat: bot fully implemented. left some bugs

--- a/index.html
+++ b/index.html
@@ -201,10 +201,10 @@
             <div class="contact-us__container">
                 <h2 class="contact-us__title">Contact us</h2>
                 <form>
-                    <input required type="text" placeholder="Enter your email address" />
-                    <input required type="tel" placeholder="Enter your phone number" />
-                    <input required type="email" placeholder="Enter your email address" />
-                    <button type="submit">Submit</button>
+                    <input required type="text" placeholder="Enter your name" id="name" />
+                    <input required type="tel" placeholder="Enter your phone number" id="phone" />
+                    <input required type="email" placeholder="Enter your email address" id="email" />
+                    <button type="submit" onclick="sendMessage()">Submit</button>
                 </form>
             </div>
         </section>
