refactor: Improve header styling and add logo link to homepage

--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
 </head>
 <body>
     <header class="header">
-        <h1 class="header__logo">Mildo</h1>
+        <h1 class="header__logo">
+            <a class="header__link" href="/">
+                Mildo
+            </a>
+        </h1>
     </header>
     <main class="main">
         <section class="hero">
