--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/sections/faq.css">
     <link rel="stylesheet" href="css/sections/contact-us.css">
     <script src="js/index.js" defer></script>
+    <script src="js/animation.js" defer></script>
     <title>Mildo</title>
 </head>
 <body>
@@ -34,6 +35,7 @@
                 muted
                 autoplay
                 loop
+                poster="./assets/img/preview.jpg"
             >
                 <source src="https://firebasestorage.googleapis.com/v0/b/mildo-84606.appspot.com/o/mildo-main.video.mov?alt=media&token=f61050a0-79c3-4c9c-b3de-70940bffd62a" type="video/mp4">
             </video>
@@ -204,12 +206,30 @@
         <section class="contact-us">
             <div class="contact-us__container">
                 <h2 class="contact-us__title">Contact us</h2>
-                <form>
-                    <input required type="text" placeholder="Enter your name" id="name" />
-                    <input required type="tel" placeholder="Enter your phone number" id="phone" />
-                    <input required type="email" placeholder="Enter your email address" id="email" />
-                    <button type="submit" onclick="sendMessage()">Submit</button>
-                </form>
+                <div class="contact-us__box">
+                    <iframe
+                        class="contact-us__map"
+                        src="https://yandex.ru/map-widget/v1/?um=constructor%3A1215ae991029562569bd2ce7dda3d1f709d34bc0a98ab4999bc29c6f6f92a061&amp;source=constructor" 
+                        width="100%"
+                        height="100%"
+                        frameborder="0"
+                    ></iframe>
+                    <form id="contact-form" class="contact-us__form">
+                        <div class="contact-us__field contact-us__name-wrapper">
+                            <label for="name" class="contact-us__field-label contact-us__name-label">Name</label>
+                            <input class="contact-us__field-input contact-us__name-input" required type="text" placeholder="Enter your name" id="name" />
+                        </div>
+                        <div class="contact-us__field contact-us__phone">
+                            <label for="phone" class="contact-us__field-label contact-us__phone-label">Phone</label>
+                            <input class="contact-us__field-input contact-us__phone-input" required type="tel" placeholder="Enter your phone number" id="phone" />
+                        </div>
+                        <div class="contact-us__field contact-us__email">
+                            <label for="email" class="contact-us__field-label contact-us__email-label">Email</label>
+                            <input class="contact-us__field-input contact-us__email-input" required type="email" placeholder="Enter your email address" id="email" />
+                        </div>
+                        <button class="contact-us__submit" type="submit">Send</button>
+                    </form>
+                </div>
             </div>
         </section>
     </main>
