feat: other parts also added of collection

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                         </a>
                     </li>
                     <li class="collections__list-item">
+                      <a class="collections_list_link" href="boots.html">
                         <h2 class="collections__list-title">
                             Boots
                         </h2>
@@ -63,24 +64,29 @@
                             class="collections__list-img"
                             src="https://firebasestorage.googleapis.com/v0/b/mildo-84606.appspot.com/o/mildo-boots.webp?alt=media&token=6aadbaec-57ab-4c2c-a62d-c95fd2391469"
                         >
+                      </a>
                     </li>
                     <li class="collections__list-item">
-                        <h2 class="collections__list-title">
+                        <a class="collections_list_link" href="sneakers.html">
+                          <h2 class="collections__list-title">
                             Sneakers
-                        </h2>
-                        <img
-                            class="collections__list-img"
-                            src="https://firebasestorage.googleapis.com/v0/b/mildo-84606.appspot.com/o/mildo-snekaers.webp?alt=media&token=b0a037b7-1a9e-4104-9c76-374a8c70d6e1"
-                        >
+                          </h2>
+                          <img
+                              class="collections__list-img"
+                              src="https://firebasestorage.googleapis.com/v0/b/mildo-84606.appspot.com/o/mildo-snekaers.webp?alt=media&token=b0a037b7-1a9e-4104-9c76-374a8c70d6e1"
+                          >
+                        </a>
                     </li>
                     <li class="collections__list-item">
+                      <a class="collections_list_link" href="slippers.html">
                         <h2 class="collections__list-title">
-                            Slipper
+                            Slippers
                         </h2>
                         <img
                             class="collections__list-img"
                             src="https://firebasestorage.googleapis.com/v0/b/mildo-84606.appspot.com/o/mildo-slipper.webp?alt=media&token=c61accee-b37b-4928-b7d7-a22082b7e4e9"
                         >
+                      </a>
                     </li>
                 </ul>
             </div>
