--- a/sneakers.html
+++ b/sneakers.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/sections/faq.css">
     <link rel="stylesheet" href="css/sections/contact-us.css">
     <script src="js/index.js" defer></script>
-    <title>Shoes</title>
+    <title>Sneakers</title>
 </head>
 <body>
     <header class="header">
@@ -24,7 +24,7 @@
     </header>
     <section class="hero">
         <div class="hero__container">
-            <h2 class="hero__title">Shoes</h2>
+            <h2 class="hero__title">Sneakers</h2>
             <p class="hero__desc">
                 Our handcrafted shoes are designed to please and built to last.
                 From casual to formal, you’ll always feel great wearing them.
